--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <a class="header-nav__link" href="#">Контрагентам</a>
               <a class="header-nav__link" href="#">Дизайнерам</a>
               <a class="header-nav__link" href="#">Вакансии</a>
-              <a class="header-nav__logo">
+              <a class="header-nav__logo" href="catalog.html">
                 <img src="img/icon/logo.svg" alt="logo" />
               </a>
               <a class="header-nav__link" href="#">
@@ -74,7 +74,7 @@
         </div>
       </div>
     </header>
-    <section>
+    <section style="display: none;">
       <div class="container">
         <div class="wrapper">
           <img src="img/header-bg.jpg" alt="" />
