added media 375px cart.html and media 768px, 375px contacts.html

--- a/catalog.html
+++ b/catalog.html
@@ -17,10 +17,10 @@
                 <a class="header-nav__link" href="#">Контрагентам</a>
                 <a class="header-nav__link" href="#">Дизайнерам</a>
                 <a class="header-nav__link" href="#">Вакансии</a>
-                <a class="header-nav__logo">
+                <a class="header-nav__logo" href="#">
                   <img src="img/icon/logo.svg" alt="logo" />
                 </a>
-                <a class="header-nav__link" href="#">
+                <a class="header-nav__link" href="cart.html">
                   <img src="img/icon/search.svg" alt="search logo" />
                   Поиск
                 </a>
