--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="second-screen__caterories">
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/1.jpg');"></div>
+                <div class="second-screen__category-images" style="background: url('../img/category/1.jpg');"></div>
                 <p class="second-screen__caterories-text">Кольца</p>
             </div>
             </a>
