--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
           <a class="header-nav__logo">
             <img src="img/icon/logo.svg" alt="logo" />
           </a>
-          <a class="header-nav__link" href="#">
+          <a class="header-nav__link" href="contact.html">
             <img src="img/icon/search.svg" alt="search logo" />
             Поиск
           </a>
@@ -473,13 +473,12 @@
           }
         },
         {
-          breakpoint: 480,
+          breakpoint: 376,
           settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
+            vertical: true,
           }
         }
-    ]
+      ]
       });
     </script>
   </body>
