added new changes index.html

--- a/index.html
+++ b/index.html
@@ -103,37 +103,37 @@
           <div class="second-screen__caterories">
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/1.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/1.jpg');"></div>
                 <p class="second-screen__caterories-text">Кольца</p>
             </div>
             </a>
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/2.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/2.jpg');"></div>
                 <p class="second-screen__caterories-text">Серьги</p>
               </div>
             </a>            
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/3.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/3.jpg');"></div>
                 <p class="second-screen__caterories-text">Подвески</p>
               </div>
             </a>            
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/4.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/4.jpg');"></div>
                 <p class="second-screen__caterories-text">Запонки</p>
               </div>
             </a>            
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/5.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/5.jpg');"></div>
                 <p class="second-screen__caterories-text">Браслеты</p>
               </div>
             </a>            
             <a class="second-screen__caterories-link" href="#">
               <div class="second-screen__category-item">
-                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('../img/category/6.jpg');"></div>
+                <div class="second-screen__category-images" style="background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%), url('img/category/6.jpg');"></div>
                 <p class="second-screen__caterories-text">Часы</p>
               </div>
             </a>
